--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,22 @@
 <!--    <dependency>-->
 <!--      <groupId>org.springframework.boot</groupId>-->
 <!--      <artifactId>spring-boot-starter-log4j2</artifactId>-->
-<!--      <version>3.3.3</version>-->
+<!--      <version>3.3.2</version>-->
 <!--    </dependency>-->
+
+
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.boot</groupId>-->
+<!--      <artifactId>spring-boot-starter</artifactId>-->
+<!--      <exclusions>-->
+<!--        <exclusion>-->
+<!--          <groupId>org.springframework.boot</groupId>-->
+<!--          <artifactId>spring-boot-starter-logging</artifactId>-->
+<!--        </exclusion>-->
+<!--      </exclusions>-->
+<!--    </dependency>-->
+
+
 
     <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
     <dependency>
