--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 <!--      <version>6.1.12</version>-->
 <!--    </dependency>-->
 
-    <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
 
 
 <!--    &lt;!&ndash; https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api &ndash;&gt;-->
@@ -84,9 +84,6 @@
 <!--&lt;!&ndash;    </dependency>&ndash;&gt;-->
 
 
-
-
-
 <!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.projectlombok/lombok &ndash;&gt;-->
 <!--    <dependency>-->
 <!--      <groupId>org.projectlombok</groupId>-->
@@ -125,8 +122,9 @@
 <!--</project>-->
 
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.example</groupId>
   <artifactId>GymApp</artifactId>
@@ -211,12 +209,12 @@
       <version>2.17.2</version>
     </dependency>
 
-<!--    &lt;!&ndash; https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 &ndash;&gt;-->
-<!--    <dependency>-->
-<!--      <groupId>com.fasterxml.jackson.datatype</groupId>-->
-<!--      <artifactId>jackson-datatype-jsr310</artifactId>-->
-<!--      <version>2.17.2</version>-->
-<!--    </dependency>-->
+    <!--    &lt;!&ndash; https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 &ndash;&gt;-->
+    <!--    <dependency>-->
+    <!--      <groupId>com.fasterxml.jackson.datatype</groupId>-->
+    <!--      <artifactId>jackson-datatype-jsr310</artifactId>-->
+    <!--      <version>2.17.2</version>-->
+    <!--    </dependency>-->
 
     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
     <dependency>
@@ -268,19 +266,16 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.5.7</version>
-<!--      <scope>test</scope>-->
+      <!--      <scope>test</scope>-->
     </dependency>
 
 
-
-<!--    <dependency>-->
-<!--      <groupId>org.slf4j</groupId>-->
-<!--      <artifactId>slf4j-simple</artifactId>-->
-<!--      <version>2.0.16</version>-->
-<!--      <scope>test</scope>-->
-<!--    </dependency>-->
-
-
+    <!--    <dependency>-->
+    <!--      <groupId>org.slf4j</groupId>-->
+    <!--      <artifactId>slf4j-simple</artifactId>-->
+    <!--      <version>2.0.16</version>-->
+    <!--      <scope>test</scope>-->
+    <!--    </dependency>-->
 
 
   </dependencies>
