Save current changes before creating hibernate-integration branch

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,6 @@ build/
 ### Mac OS ###
 .DS_Store
 
-<<<<<<< HEAD
-.idea/workspace.xml
-=======
-application.log
->>>>>>> spring-core-refactor
+
+logs/application.log
+
