added all tables in db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,14 @@ data.file=classpath:data.txt
 
 
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/gym_db
+spring.datasource.username=user
+spring.datasource.password=user
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+hibernate.hbm2ddl.auto=update
