--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 hibernate.hbm2ddl.auto=update
 
 
-
+jwt.secret=yourSuperSecretKey
+jwt.expiration=3600000
