--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+
 data.file=classpath:data.txt
+
+
+
+
 
 
 
@@ -12,10 +17,24 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/gym_db
 spring.datasource.username=user
 spring.datasource.password=user
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 hibernate.hbm2ddl.auto=update
 
 
 jwt.secret=yourSuperSecretKey
 jwt.expiration=3600000
+
+server.port=8081
+
+
+management.endpoints.web.exposure.include=health,prometheus,info
+management.endpoint.health.show-details=always
+
+management.metrics.export.prometheus.enabled=true
+management.endpoint.prometheus.enabled=true
+
+
+spring.profiles.active=local
