--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,16 @@
       <artifactId>spring-webmvc</artifactId>
       <version>6.1.12</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+      <version>3.3.4</version>
+    </dependency>
 
 
-<!--      &lt;!&ndash; Spring AOP &ndash;&gt;-->
+
+
+    <!--      &lt;!&ndash; Spring AOP &ndash;&gt;-->
 <!--      <dependency>-->
 <!--        <groupId>org.springframework</groupId>-->
 <!--        <artifactId>spring-aop</artifactId>-->
