--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym_db
-spring.datasource.username=user
-spring.datasource.password=user
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/gym_db_local
+spring.datasource.username=user_local
+spring.datasource.password=user_local
+server.port=8081
 
