--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -7,7 +7,7 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'spring-boot-app'
+  - job_name: 'GymApp'
     scrape_interval: 5s
     metrics_path: '/actuator/prometheus'
     static_configs:
