--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/gym_db_dev
 spring.datasource.username=user_dev
-spring.datasource.password=password_dev
+spring.datasource.password=user_dev
+server.port=8082
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
