--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym_db
-spring.datasource.username=user
-spring.datasource.password=user
+spring.datasource.url=jdbc:postgresql://localhost:5434/gym_db_prod
+spring.datasource.username=user_prod
+spring.datasource.password=user_prod
+server.port=8083
+
+
+
