--- a/src/main/resources/application-stg.properties
+++ b/src/main/resources/application-stg.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym_db
-spring.datasource.username=user
-spring.datasource.password=user
+spring.datasource.url=jdbc:postgresql://localhost:5435/gym_db_stg
+spring.datasource.username=user_stg
+spring.datasource.password=user_stg
+server.port=8084
 
 
