--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,40 +1,49 @@
+#
+#
+#data.file=classpath:data.txt
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+##debug=true
+#
+#spring.datasource.url=jdbc:postgresql://localhost:5432/gym_db
+#spring.datasource.username=user
+#spring.datasource.password=user
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#hibernate.hbm2ddl.auto=update
+#
+#
+#server.port=8081
+#
+#management.endpoints.web.exposure.include=*
+#management.endpoint.health.show-details=always
+#
+#management.metrics.export.prometheus.enabled=true
+#management.endpoint.prometheus.enabled=true
+#
+#spring.profiles.active=local
+
+
 
 
 data.file=classpath:data.txt
 
-
-
-
-
-
-
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym_db
-spring.datasource.username=user
-spring.datasource.password=user
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 hibernate.hbm2ddl.auto=update
 
-
-jwt.secret=yourSuperSecretKey
-jwt.expiration=3600000
-
-server.port=8081
-
-
-management.endpoints.web.exposure.include=health,prometheus,info
+management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 management.metrics.export.prometheus.enabled=true
 management.endpoint.prometheus.enabled=true
 
+spring.profiles.active=stg
 
-spring.profiles.active=local
+
