added all authentication logics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@ management.endpoint.health.show-details=always
 management.metrics.export.prometheus.enabled=true
 management.endpoint.prometheus.enabled=true
 
-spring.profiles.active=dev
+spring.profiles.active=local
 
 
