circuit breaker works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,22 @@ spring.profiles.active=local
 
 
 
-
+#Eureka
 spring.application.name=gym-app-microservice
-
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
+#circuit breaker
+# Default configuration for circuit breakers
+resilience4j.circuitbreaker.configs.default.slidingWindowSize=100
+resilience4j.circuitbreaker.configs.default.minimumNumberOfCalls=10
+resilience4j.circuitbreaker.configs.default.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.configs.default.waitDurationInOpenState=10000
+resilience4j.circuitbreaker.configs.default.failureRateThreshold=60
+resilience4j.circuitbreaker.configs.default.eventConsumerBufferSize=10
 
+# Instance specific configuration
+resilience4j.circuitbreaker.instances.myBackend.baseConfig=default
 
