--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,7 @@ resilience4j.circuitbreaker.configs.default.eventConsumerBufferSize=10
 # Instance specific configuration
 resilience4j.circuitbreaker.instances.myBackend.baseConfig=default
 
+
+
+logging.level.feign.client=DEBUG
+logging.level.feign.Logger=DEBUG
