--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,6 @@ resilience4j.circuitbreaker.instances.myBackend.baseConfig=default
 
 logging.level.feign.client=DEBUG
 logging.level.feign.Logger=DEBUG
+
+
+jwt.secret-key=PL+rgtYceM//T3nOWL4hl4Fa2lblR31Sse/PnUqCOyA=
