--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,17 @@ logging.level.feign.Logger=DEBUG
 
 
 jwt.secret-key=PL+rgtYceM//T3nOWL4hl4Fa2lblR31Sse/PnUqCOyA=
+
+
+# ActiveMQ server
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
+spring.jms.pub-sub-domain=false
+
+
+
+
+
+
+
