--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,21 @@
     <relativePath/>
   </parent>
 
+
+
   <dependencies>
+
+    <dependency>
+      <groupId>jakarta.jms</groupId>
+      <artifactId>jakarta.jms-api</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-activemq</artifactId>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-circuitbreaker-reactor-resilience4j -->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
