feature/active MQ part2 with tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ resilience4j.circuitbreaker.instances.myBackend.baseConfig=default
 
 
 logging.level.feign.client=DEBUG
-logging.level.feign.Logger=DEBUG
+logging.level.fei§gn.Logger=DEBUG
 
 
 jwt.secret-key=PL+rgtYceM//T3nOWL4hl4Fa2lblR31Sse/PnUqCOyA=
@@ -46,6 +46,12 @@ spring.activemq.user=admin
 spring.activemq.password=admin
 spring.jms.pub-sub-domain=false
 
+# Dead Letter Queue
+spring.jms.template.delivery-mode=persistent
+spring.jms.template.pub-sub-domain=false
+spring.jms.redelivery-policy.maximum-redeliveries=3
+spring.jms.redelivery-policy.redelivery-delay=1000
+spring.jms.redelivery-policy.queue-prefetch=1
 
 
 
